--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-    "name": "request-header-parser-api",
+    "name": "fcc-headerparser-microservice",
     "version": "1.0.0",
-    "description": "Request Header Parser Microservice. Free Code Camp Project.",
-    "main": "server.js",
-    "engines": {
-        "node": "6.11.1"
-    },
+    "description": "Request Header Parser Microservice. Back End Development and APIs Projects. Free Code Camp.",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node index.js"
     },
-    "author": "minhkashyu",
-    "license": "MIT",
     "dependencies": {
-        "express": "^4.14.0"
-    }
+        "cors": "^2.8.1",
+        "dotenv": "^8.2.0",
+        "express": "^4.18.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/minhkashyu/fcc-headerparser-microservice.git"
+    },
+    "bugs": {
+        "url": "https://github.com/minhkashyu/fcc-headerparser-microservice/issues"
+    },
+    "homepage": "https://github.com/minhkashyu/fcc-headerparser-microservice#readme",
+    "author": "Minh Ta <https://github.com/minhkashyu>",
+    "keywords": [
+        "freeCodeCamp",
+        "node",
+        "express"
+    ],
+    "license": "MIT"
 }
